updated portfolio projects, fixed navbar on mobile and added resume button, +various bug smashes

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,7 @@
 /* Global CSS */
+* {
+  outline: red;
+}
 body {
   margin: 0;
   font-family: "Roboto", sans-serif;
@@ -153,7 +156,7 @@ h3 {
   display: flex;
   align-items: flex-start;
   padding-bottom: 16px;
-  letter-spacing: 3px;
+  letter-spacing: 1px;
 }
 /* Portfolio, Testimonial & Contact Me */
 .sub--title {
@@ -167,7 +170,7 @@ h3 {
 /* Navbar Style Start */
 .navbar {
   display: flex;
-  max-width: 100%;
+  width: 100vw;
   justify-content: space-between;
   align-items: center;
   background: var(--white);
@@ -178,6 +181,15 @@ h3 {
   right: 0;
   height: 60px;
   z-index: 1000;
+}
+
+.svg-icon {
+  width: 65px;
+  height: 65px;
+  fill: var(--black);
+  overflow: hidden;
+  vertical-align: middle;
+  margin: 0 0 3px 0;
 }
 .navbar--items > ul {
   list-style: none;
@@ -228,6 +240,13 @@ h3 {
   flex-shrink: 0;
   text-decoration: none;
   margin: 5px 0 0 0 !important;
+}
+
+.header--social--icon > a:hover {
+  color: var(--primary);
+  transform: translatey(-4px);
+  transition: transform 0.2s ease-in-out;
+  filter: drop-shadow(0 0 0.75rem (--primary));
 }
 
 .header--social--icon > li {
@@ -324,12 +343,16 @@ h3 {
     opacity: 0;
   }
 }
+
+.GIT {
+  margin-left: 85px;
+}
 /* Hero Section Style Ends */
 
 /* Skills Section Style */
 .skills--section {
   display: flex;
-  padding: 40px 24px;
+  padding: 40px 10px;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
@@ -352,17 +375,17 @@ h3 {
   gap: 32px;
 }
 .skills--section--card {
-  display: flex;
+  display: inline-block;
+
   padding: 16px;
-  flex-direction: column;
   align-items: flex-start;
-  gap: 12px;
-  flex: 1 0 0;
-  border-radius: 10.6px;
+  flex: 4 0 0;
+  border-radius: 10px;
   background: var(--bg-shade);
-  min-width: 400px;
-  max-width: 500px;
-}
+  width: 100%;
+  max-width: 400px;
+  min-width: 40vw;
+}s
 
 .skills--section--card:hover {
   border-bottom: 4px solid var(--primary);
@@ -404,6 +427,7 @@ h3 {
   font-style: normal;
   font-weight: 400;
   line-height: 25px;
+  width: 100%;
 }
 
 .tech--skills {
@@ -476,9 +500,8 @@ h3 {
 .portfolio--section--container {
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
   justify-content: space-around;
-  gap: 42.6px;
+  gap: 20px;
   width: auto;
 }
 .portfolio--section--img {
@@ -495,7 +518,7 @@ h3 {
   flex-direction: column;
   align-items: flex-start;
   max-width: 800px;
-  gap: 32px;
+  gap: 0px;
   flex: 1 0 calc(33.333% - 28.4px);
   background: #fff;
   box-shadow: 0 0 32px 0 rgba(0, 0, 0, 0.15);
@@ -513,7 +536,7 @@ h3 {
 
 .portfolio--section--card--content {
   display: flex;
-  padding: 32px;
+  padding: 16px;
   flex-direction: column;
   align-items: flex-start;
   gap: 32px;
@@ -531,8 +554,8 @@ h3 {
   padding-bottom: 10.6px;
   font-weight: 600;
 }
-.portfolio--section--card:hover path {
-  stroke: #006b6a;
+.portfolio--link:hover path {
+  stroke: #3032d6;
 }
 
 .portfolio--tech-stack {
@@ -674,14 +697,14 @@ input[type="checkbox"] {
 /* Footer Starts */
 .footer--container {
   display: flex;
-  padding: 106.667px 85.333px;
+  width: 100vw;
   flex-direction: column;
-  align-items: flex-start;
   background: var(--bg-shade);
   align-items: center;
   align-self: stretch;
 }
 .footer--link--container {
+  margin: 0 12px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -691,7 +714,7 @@ input[type="checkbox"] {
   list-style: none;
   display: flex;
   align-items: flex-start;
-  gap: 42.667px;
+  gap: 18px;
   text-decoration: none;
 }
 .footer--items ul > li > a {
@@ -745,7 +768,6 @@ input[type="checkbox"] {
 
   .hero--section--content--box {
     margin-top: 50px;
-    align-items: center;
   }
 
   .hero--section--content--box {
@@ -888,7 +910,7 @@ input[type="checkbox"] {
   .portfolio--section--container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: flex-start;
   }
 
   .hero--section--content--box {
@@ -908,7 +930,7 @@ input[type="checkbox"] {
 @media screen and (max-width: 500px) {
   .hero--section--img,
   .hero--section--img > img {
-    margin-top: 50px;
+    margin-top: 24px;
     width: 300px;
     height: 300px;
   }
@@ -927,9 +949,9 @@ input[type="checkbox"] {
     line-height: 25px !important;
   }
 
-  .hero--section--content {
+  .hero--section--content,
+  .GIT {
     margin-left: 24px;
   }
-
 }
 /* Responsive Screens Ends*/
